# telegram-bot

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
ai_api/: gemini.py
